prevent discussion headings from overlapping on subsequent lines when they are long enough to wrap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,7 +146,8 @@ footer {
 h1 {
   text-align: right;
   font-size: 200%;
-  margin: 1.5em 0 1em 0;
+  line-height: 125%;
+  margin: 1.25em 0 .75em 0;
 }
 
 a:link, a:active, a:visited {
